--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "homepage": "https://huzet.netlify.app/frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
