--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "https://huzet.netlify.app/build",
+ // "homepage": "https://huzet.netlify.app/build",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
